# WildBoids

./: .gitignore  CLAUDE.md  CMakeLists.txt  boid_theory.md  coevolution_log.csv  evolution_neuralnet_thrusters.md  evolution_theory.md  fromjava_gotchas.md  plan_newplatform.md  sensor_debug.csv  spec.md  spec_chat.md  step_by_step_planner.md  toplevel_planner.md
admin_code/: package_champions.py
build-release/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  build.ninja  cmake_install.cmake  compile_commands.json  wildboids  wildboids_headless  wildboids_tests  wildboids_tests-b12d07c_include.cmake  wildboids_tests-b12d07c_tests.cmake
data/: 6thruster_foodonly_simple_boid.json  dan_log.md  foodonly_simple_boid.json  just food_simple_boid.json  sim_config.json  simple_boid.json  simple_predator.json
data/champion_packages/: champion_predator_gen78.json  sim_config.json
data/champions/: champion_gen0.json  champion_gen10.json  champion_gen100.json  champion_gen108.json  champion_gen110.json  champion_gen12.json  champion_gen120.json  champion_gen130.json  champion_gen140.json  champion_gen150.json  champion_gen160.json  champion_gen170.json  champion_gen180.json  champion_gen190.json  champion_gen20.json  champion_gen200.json  champion_gen210.json  champion_gen220.json  champion_gen230.json  champion_gen240.json  champion_gen250.json  champion_gen260.json  champion_gen263.json  champion_gen270.json  champion_gen273.json  champion_gen280.json  champion_gen290.json  champion_gen3.json  champion_gen30.json  champion_gen300.json  champion_gen310.json  champion_gen320.json  champion_gen33.json  champion_gen330.json  champion_gen340.json  champion_gen350.json  champion_gen360.json  champion_gen370.json  champion_gen380.json  champion_gen390.json  (+18 more)
llm_convos/: 2026-01-20_1706_Read_the_CLAUDEmd_file_and_then.md  2026-02-15_1740_The_user_opened_the_file_UsersdanolnerCodeclaudewi.md  2026-02-15_2154_The_user_opened_the_file_UsersdanolnerCodeclaudewi.md  2026-02-16_1959_The_user_opened_the_file_UsersdanolnerCodeclaudewi.md  2026-02-17_0636_In_this_folder_in_the_build_deps.md  2026-02-23_1934_The_user_opened_the_file_UsersdanolnerCodeclaudewi.md  2026-02-24_1615_The_user_opened_the_file_UsersdanolnerCodeclaudewi.md  2026-02-24_1632_The_user_opened_the_file_UsersdanolnerCodeclaudewi.md  2026-02-25_1100_The_user_opened_the_file_UsersdanolnerCodeclaudewi.md  unknown_1af4ff9f.md  unknown_243bed09.md  unknown_40f3752e.md  unknown_871ad6e9.md  unknown_a734a168.md  unknown_b2bcfe6f.md  unknown_baed293a.md  unknown_d4b44cf7.md  unknown_e46ce602.md  unknown_fd3751e6.md
orig_java/boids/: AngleFromTwoPoints.java  Bits.java  Boid.java  BoidsCage.java  BoidsStartUp.form  BoidsStartUp.java  Buffer.java  DirectionRule.java  Evolution.java  GraveYard.java  PredatorBoid.java  PreyBoid.java  SortArray.java  Utils.java
planningdocs/: boid_theory2.md  build_log.md  evolution_neuralnet_thrusters.md  evolution_theory.md  forward_plan.md  portability_planner.md  sense_system_planning.md  spec.md
planningdocs/planning_archive/: fromjava_gotchas.md  oldjavacode_summary.md  plan_newplatform.md
scripts/: compare_champions.py  validate_morphology_evolution.py
src/: headless_main.cpp  main.cpp
src/brain/: crossover.cpp  crossover.h  direct_wire_network.cpp  direct_wire_network.h  innovation_tracker.cpp  innovation_tracker.h  mutation.cpp  mutation.h  neat_genome.cpp  neat_genome.h  neat_network.cpp  neat_network.h  population.cpp  population.h  processing_network.h  speciation.cpp  speciation.h
src/display/: app.cpp  app.h  renderer.cpp  renderer.h
src/io/: boid_spec.cpp  boid_spec.h  sim_config.cpp  sim_config.h
src/simulation/: boid.cpp  boid.h  food_source.cpp  food_source.h  morphology_genome.cpp  morphology_genome.h  rigid_body.cpp  rigid_body.h  sensor.h  sensory_system.cpp  thruster.h  (+7 more)
tests/: test_boid.cpp  test_boid_brain.cpp  test_boid_spec.cpp  test_crossover.cpp  test_direct_wire.cpp  test_dual_evolution.cpp  test_evolution.cpp  test_food.cpp  test_food_source.cpp  test_headless.cpp  test_innovation.cpp  test_morphology.cpp  test_mutation.cpp  test_neat_genome.cpp  test_neat_network.cpp  test_population.cpp  test_predation.cpp  test_rigid_body.cpp  test_sensor.cpp  test_shoaling.cpp  test_sim_config.cpp  test_spatial_grid.cpp  test_speciation.cpp  test_thruster.cpp  test_toroidal.cpp  test_vec2.cpp  test_world.cpp
(+17 files in other folders)
